# testing-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  requirements.txt
.venv12/: pyvenv.cfg
bot/: .env.example  SETUP.md  __init__.py  run_bot.sh  telegram_bot.py
config/: agents.yaml  tasks.yaml
examples/: calculator.py
src/: crew.py  main.py
src/tools/: coverage_tool.py
tests/: conftest.py  test_crew.py
